Refactor command API